@@ -2,6 +2,7 @@
 -Added 'so' slideout custom event
 -Added linknext chord slide handshape length correction
 -Added anchor placeholder note removing
+-Added checking for need to reset arrangement ids
 
 2.1
 -Added 'overwrite original file' option
